--- a/tsne-mnist-canvas/package.json
+++ b/tsne-mnist-canvas/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@tensorflow/tfjs": "^1.3.2",
     "@tensorflow/tfjs-tsne": "0.2.0",
-    "d3": "^5.2.0"
+    "d3": "^5.2.0",
+    "deasync": "^0.1.21"
   },
   "scripts": {
     "watch": "NODE_ENV=development parcel index.html --no-hmr --open  ",
@@ -26,5 +27,8 @@
     "cross-env": "^5.1.6",
     "parcel-bundler": "~1.10.3",
     "yalc": "~1.0.0-pre.22"
-  }
+  },
+"postinstall":"cd node_modules/deasync &&  node-gyp rebuild && cd ../../",
+"postupgrade": "yarn postinstall"
 }
+
